--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,56 +1,82 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
-    display: grid;
-    place-items: center;
-    margin: 0;
+  display: grid;
+  place-items: center;
+  margin: 0;
 }
 
 /* HEADER */
 
 .chat-header {
-    padding:15px 0;
-
+  padding: 15px 0;
 }
 
 .container {
-    width: 100%;
-    max-width: 600px;
+  width: 100%;
+  max-width: 600px;
 }
 
 button {
-    padding: 10px;
-    border: none;
-    cursor: pointer;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
 
-    background-color: plum;
-    border-radius: 10px;
+  background-color: plum;
+  border-radius: 10px;
 }
 
 .wrapper {
-    height: 100vh;
-    background: linear-gradient(0deg, rgba(255, 255, 0, 0.75) 49%, rgba(14, 0, 255, 0.75) 100%);
+  height: calc(100vh - 200px);
+  background: linear-gradient(0deg, rgba(255, 255, 0, 0.75) 49%, rgba(14, 0, 255, 0.75) 100%);
 
-    outline: 1px solid blue ;
-    padding: 15px;
-    overflow-y: auto;
-    
+  border: 1px solid blue;
+  padding: 15px;
+  overflow-y: auto;
 }
 
 .message {
-    background-color: #fff;
-    padding: 15px;
-    max-width: 50%;
-    margin-bottom: 20px;
+  background-color: #fff;
+  padding: 15px;
+  max-width: 50%;
+  margin-bottom: 20px;
 
-    border-radius: 15px;
+  border-radius: 15px;
 }
 
 .message.contact {
-    margin-left: auto;
-    background-color: lightgreen;
+  margin-left: auto;
+  background-color: lightgreen;
 }
 
 .timestamp {
-    font-size: 12px;
-    color: #757575;
-    margin-left: auto;
+  font-size: 12px;
+  color: #757575;
+  margin-left: auto;
+}
+
+.box {
+  position: relative;
+  width: 100%;
+  height: 135px;
+  padding: 20px;
+  background-color: #ccc;
+}
+.message-area {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #757575;
+  border-radius: 15px;
+  resize: none;
+  padding: 10px 90px 10px 15px;
+}
+.send-message {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
 }
