--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -78,9 +78,39 @@ button {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  right: 20px;
+  right: 30px;
 }
 .avatar {
   border-radius: 50%;
   display: block;
+}
+.file-load {
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  opacity: 0;
+}
+.label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 14px;
+  right: 30px;
+  width: 30px;
+  height: 30px;
+}
+.loader-line {
+  position: absolute;
+  width: calc(100% - 40px);
+  height: 5px;
+  background-color: #fff;
+  border: 1px solid #474747;
+  border-radius: 10px;
+}
+.inner-loader {
+  width: 0;
+  height: 100%;
+  background: rgb(12, 35, 236);
+  background: linear-gradient(97deg, rgba(12, 35, 236, 1) 0%, rgba(57, 208, 22, 1) 100%);
 }
