--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -114,3 +114,47 @@ button {
   background: rgb(12, 35, 236);
   background: linear-gradient(97deg, rgba(12, 35, 236, 1) 0%, rgba(57, 208, 22, 1) 100%);
 }
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.media-box {
+  position: relative;
+  max-width: 50%;
+  width: fit-content;
+  left: 15px;
+  border: 2px solid #a5ffabcc;
+  background-color: #93f199cc;
+  border-radius: 15px;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+.media-box.position-right {
+  margin-left: auto;
+}
+
+.image-message {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.img-meta {
+  position: absolute;
+  right: 15px;
+  bottom: 10px;
+  color: #fff;
+  background-color: rgba(13, 12, 12, 0.6);
+  padding: 2px 7px;
+  border-radius: 15px;
+}
